--- a/airTickets/main/res/layout/activity_main.xml
+++ b/airTickets/main/res/layout/activity_main.xml
@@ -151,6 +151,14 @@
 
         </LinearLayout>
 
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="50dp"
+            android:layout_marginTop="10dp"
+            android:text="Найти"
+            android:textSize="48px"/>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
